--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/339fea82da1b99beda1eb7b67cc72e1a'/></h2>
-Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 252 points<br>
+Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 261 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -70,6 +70,7 @@ Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Historian (Level 6)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Master Author (Level 7)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Master Author (Level 8)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Historian (Level 7)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Presenter (Level 4)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
@@ -85,26 +86,26 @@ Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
- 391 log
- 276 status
- 253 commit
- 122 checkout
- 121 diff
- 106 add
+ 394 log
+ 282 status
+ 256 commit
+ 124 checkout
+ 123 diff
+ 107 add
   93 branch
   62 rebase
+  44 show
   43 push
-  42 show
   26 reset
   23 config
   18 cherry-pick
   17 stash
   14 remote
+  11 clean
    9 rm
    9 merge
    8 init
    8 fetch
-   8 clean
    6 revert
    6 reflog
    5 update-ref
