--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/339fea82da1b99beda1eb7b67cc72e1a'/></h2>
-Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 290 points<br>
+Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 297 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -79,6 +79,7 @@ Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Presenter (Level 4)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Presenter (Level 5)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
+<li><div class="title">Presenter (Level 6)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Seamstress (Level 4)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Seamstress (Level 5)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -90,15 +91,15 @@ Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
- 493 log
- 396 status
- 320 commit
- 169 diff
- 163 checkout
+ 494 log
+ 400 status
+ 321 commit
+ 171 diff
+ 165 checkout
  122 add
  118 branch
   78 rebase
-  59 show
+  63 show
   43 push
   32 reset
   23 config
