--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/339fea82da1b99beda1eb7b67cc72e1a'/></h2>
-Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 297 points<br>
+Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 304 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -84,6 +84,7 @@ Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Seamstress (Level 5)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Socialite (Level 6)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 6)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
@@ -91,43 +92,45 @@ Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
- 494 log
- 400 status
- 321 commit
- 171 diff
- 165 checkout
- 122 add
- 118 branch
-  78 rebase
-  63 show
-  43 push
-  32 reset
-  23 config
-  22 stash
+ 604 log
+ 466 status
+ 404 commit
+ 231 diff
+ 202 checkout
+ 164 branch
+ 136 add
+  89 show
+  88 rebase
+  64 push
+  39 reset
+  27 stash
+  27 config
+  23 clean
+  21 remote
   20 cherry-pick
-  16 clean
-  14 remote
-  12 rm
-  11 merge
-   9 reflog
-   9 init
-   8 fetch
+  15 fetch
+  14 rm
+  13 merge
+  11 reflog
+  11 init
    6 revert
    5 update-ref
-   4 help
-   3 pull
+   5 pull
+   5 help
    3 mv
+   3 --version
    2 sun
    2 notes
+   2 ln
    2 clone
    2 --help
    1 stahs
    1 show-ref
    1 ls
-   1 ln
    1 iff
+   1 ckeckout
+   1 chekcout
    1 achievements
-   1 --version
 </pre>
 <script type="text/javascript">
 function showLocked() {
